<resources>
    <string name="app_name">HighSchedule</string>
    <string name="impTime">Impossible time slot</string>
    <string name="parseJsonException">Unable to parse saved schedule</string>
    <string name="showingSchedule">Show the schedule</string>
    <string name="configSchedule">Set the schedule</string>
    <string name="aboutSchedule">About</string>
    <string name="settings">Settings</string>
    <string name="events">Events</string>
    <string name="modifyEventTitle">Modify the event</string>
    <string name="modifyEventMatiereLabel">Discipline</string>
    <string name="modifyEventSalleLabel">Classroom</string>
    <string name="modifyEventStartTimeLabel">Start time</string>
    <string name="modifyEventEndTimeLabel">End time</string>
    <string name="validate">Validate</string>
    <string name="delete">Delete</string>
    <string name="modifyEventColorLabel">Color</string>
    <string name="intersectEventWarn">This time slot is clashing with another</string>
    <string name="badTimeSlot">Impossible time slot (start time >= end time)</string>
    <string name="addEvent">Add an event</string>
    <string name="remove">Delete</string>
    <string name="removeMessage">Do you really want to remove this event ?</string>
    <string name="impRemoveEvent">Unable to remove event</string>
    <string name="chooseColor">Choose a color</string>
    <string name="fieldsNotCompleted">Please complete each field</string>
</resources>
